syntax = "proto3";

package deploy.v1;

import "variables/v1/terraform.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/components/deploy/v1";

// the following are the supported terraform versions that a user can select
enum TerraformVersion {
  TERRAFORM_VERSION_UNSPECIFIED = 0;
  TERRAFORM_VERSION_LATEST = 1;

  TERRAFORM_VERSION_1_4_6 = 146;
  TERRAFORM_VERSION_1_4_5 = 145;
  TERRAFORM_VERSION_1_4_4 = 144;
  TERRAFORM_VERSION_1_4_3 = 143;
  TERRAFORM_VERSION_1_4_2 = 142;
  TERRAFORM_VERSION_1_4_1 = 141;

  TERRAFORM_VERSION_1_3_9 = 139;
  TERRAFORM_VERSION_1_3_8 = 138;
  TERRAFORM_VERSION_1_3_7 = 137;
  TERRAFORM_VERSION_1_3_6 = 136;
  TERRAFORM_VERSION_1_3_5 = 135;
  TERRAFORM_VERSION_1_3_4 = 134;
  TERRAFORM_VERSION_1_3_3 = 133;
  TERRAFORM_VERSION_1_3_2 = 132;
  TERRAFORM_VERSION_1_3_1 = 131;

  TERRAFORM_VERSION_1_2_9 = 129;
  TERRAFORM_VERSION_1_2_8 = 128;
  TERRAFORM_VERSION_1_2_7 = 127;
  TERRAFORM_VERSION_1_2_6 = 126;
  TERRAFORM_VERSION_1_2_5 = 125;
  TERRAFORM_VERSION_1_2_4 = 124;
  TERRAFORM_VERSION_1_2_3 = 123;
  TERRAFORM_VERSION_1_2_2 = 122;
  TERRAFORM_VERSION_1_2_1 = 121;

  TERRAFORM_VERSION_1_0_11 = 1011;
  TERRAFORM_VERSION_1_0_10 = 1010;
  TERRAFORM_VERSION_1_0_9 = 109;
  TERRAFORM_VERSION_1_0_8 = 108;
  TERRAFORM_VERSION_1_0_7 = 107;
  TERRAFORM_VERSION_1_0_6 = 106;
  TERRAFORM_VERSION_1_0_5 = 105;
  TERRAFORM_VERSION_1_0_4 = 104;
  TERRAFORM_VERSION_1_0_3 = 103;
  TERRAFORM_VERSION_1_0_2 = 102;
  TERRAFORM_VERSION_1_0_1 = 101;

  TERRAFORM_VERSION_0_15_5 = 10155;
  TERRAFORM_VERSION_0_15_4 = 10154;
  TERRAFORM_VERSION_0_15_3 = 10153;
  TERRAFORM_VERSION_0_15_2 = 10152;
  TERRAFORM_VERSION_0_15_1 = 10151;

  TERRAFORM_VERSION_0_14_11 = 101411;
  TERRAFORM_VERSION_0_14_10 = 101410;
  TERRAFORM_VERSION_0_14_9 = 10149;
  TERRAFORM_VERSION_0_14_8 = 10148;
  TERRAFORM_VERSION_0_14_7 = 10147;
  TERRAFORM_VERSION_0_14_6 = 10146;
  TERRAFORM_VERSION_0_14_5 = 10145;
  TERRAFORM_VERSION_0_14_4 = 10144;
  TERRAFORM_VERSION_0_14_3 = 10143;
  TERRAFORM_VERSION_0_14_2 = 10142;
  TERRAFORM_VERSION_0_14_1 = 10141;

  TERRAFORM_VERSION_0_13_7 = 10137;
  TERRAFORM_VERSION_0_13_6 = 10136;
  TERRAFORM_VERSION_0_13_5 = 10135;
  TERRAFORM_VERSION_0_13_4 = 10134;
  TERRAFORM_VERSION_0_13_3 = 10133;
  TERRAFORM_VERSION_0_13_2 = 10132;
  TERRAFORM_VERSION_0_13_1 = 10131;

  TERRAFORM_VERSION_0_12_31 = 101231;
  TERRAFORM_VERSION_0_12_30 = 101230;
  TERRAFORM_VERSION_0_12_29 = 101229;
  TERRAFORM_VERSION_0_12_28 = 101228;
  TERRAFORM_VERSION_0_12_27 = 101227;
  TERRAFORM_VERSION_0_12_26 = 101226;
  TERRAFORM_VERSION_0_12_25 = 101225;
  TERRAFORM_VERSION_0_12_24 = 101224;
  TERRAFORM_VERSION_0_12_23 = 101223;
  TERRAFORM_VERSION_0_12_22 = 101222;
  TERRAFORM_VERSION_0_12_21 = 101221;
  TERRAFORM_VERSION_0_12_20 = 101220;
  TERRAFORM_VERSION_0_12_19 = 101219;
  TERRAFORM_VERSION_0_12_18 = 101218;
  TERRAFORM_VERSION_0_12_17 = 101217;
  TERRAFORM_VERSION_0_12_16 = 101216;
  TERRAFORM_VERSION_0_12_15 = 101215;
  TERRAFORM_VERSION_0_12_14 = 101214;
  TERRAFORM_VERSION_0_12_13 = 101213;
  TERRAFORM_VERSION_0_12_12 = 101212;
  TERRAFORM_VERSION_0_12_11 = 101211;
  TERRAFORM_VERSION_0_12_10 = 101210;
  TERRAFORM_VERSION_0_12_9 = 101209;
  TERRAFORM_VERSION_0_12_8 = 101208;
  TERRAFORM_VERSION_0_12_7 = 101207;
  TERRAFORM_VERSION_0_12_6 = 101206;
  TERRAFORM_VERSION_0_12_5 = 101205;
  TERRAFORM_VERSION_0_12_4 = 101204;
  TERRAFORM_VERSION_0_12_3 = 101203;
  TERRAFORM_VERSION_0_12_2 = 101202;
  TERRAFORM_VERSION_0_12_1 = 101201;

  TERRAFORM_VERSION_0_11_15 = 101115;
  TERRAFORM_VERSION_0_11_14 = 101114;
  TERRAFORM_VERSION_0_11_13 = 101113;
  TERRAFORM_VERSION_0_11_12 = 101112;
  TERRAFORM_VERSION_0_11_11 = 101111;
  TERRAFORM_VERSION_0_11_10 = 101110;
  TERRAFORM_VERSION_0_11_9 = 101109;
  TERRAFORM_VERSION_0_11_8 = 101108;
  TERRAFORM_VERSION_0_11_7 = 101107;
  TERRAFORM_VERSION_0_11_6 = 101106;
  TERRAFORM_VERSION_0_11_5 = 101105;
  TERRAFORM_VERSION_0_11_4 = 101104;
  TERRAFORM_VERSION_0_11_3 = 101103;
  TERRAFORM_VERSION_0_11_2 = 101102;
  TERRAFORM_VERSION_0_11_1 = 101101;

  TERRAFORM_VERSION_0_10_8 = 101008;
  TERRAFORM_VERSION_0_10_7 = 101007;
  TERRAFORM_VERSION_0_10_6 = 101006;
  TERRAFORM_VERSION_0_10_5 = 101005;
  TERRAFORM_VERSION_0_10_4 = 101004;
  TERRAFORM_VERSION_0_10_3 = 101003;
  TERRAFORM_VERSION_0_10_2 = 101002;
  TERRAFORM_VERSION_0_10_1 = 101001;

  TERRAFORM_VERSION_0_9_11 = 100911;
  TERRAFORM_VERSION_0_9_10 = 100910;
  TERRAFORM_VERSION_0_9_9 = 100909;
  TERRAFORM_VERSION_0_9_7 = 100907;
  TERRAFORM_VERSION_0_9_6 = 100906;
  TERRAFORM_VERSION_0_9_5 = 100905;
  TERRAFORM_VERSION_0_9_4 = 100904;
  TERRAFORM_VERSION_0_9_3 = 100903;
  TERRAFORM_VERSION_0_9_2 = 100902;
  TERRAFORM_VERSION_0_9_1 = 100901;

  TERRAFORM_VERSION_0_8_8 = 100808;
}

// TerraformModuleConfig enables a customer to provision a terraform module in their customer's cloud account
message TerraformModuleConfig {
  TerraformVersion terraform_version = 1;
  variables.v1.TerraformVariables vars = 2;
}
